z-index fixed

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -19,7 +19,7 @@ footer {
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 12px;
+  width: 6px;
 }
 
 *::-webkit-scrollbar-track {
@@ -27,9 +27,9 @@ footer {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 50%;
-  border: 3px solid rgb(0, 64, 255);
+  background-color: rgb(111, 111, 111);
+  border-radius: 10px;
+  border: none;
 }
 html {
   scrollbar-width: thin;
